--- a/configs/coco/instance-segmentation/Base-COCO-InstanceSegmentation.yaml
+++ b/configs/coco/instance-segmentation/Base-COCO-InstanceSegmentation.yaml
@@ -14,8 +14,8 @@ MODEL:
     # NORM: "SyncBN"
     RES5_MULTI_GRID: [1, 1, 1]  # not used
 DATASETS:
-  TRAIN: ("coco_2017_train",)
-  TEST: ("coco_2017_val",)
+  TRAIN: ("training_set",)
+  TEST: ("validation_dataset",)
 SOLVER:
   IMS_PER_BATCH: 16
   BASE_LR: 0.0001
