--- a/configs/coco/instance-segmentation/Base-COCO-InstanceSegmentation.yaml
+++ b/configs/coco/instance-segmentation/Base-COCO-InstanceSegmentation.yaml
@@ -17,9 +17,9 @@ DATASETS:
   TRAIN: ("training_set",)
   TEST: ("validation_dataset",)
 SOLVER:
-  IMS_PER_BATCH: 16
-  BASE_LR: 0.0001
-  STEPS: (327778, 355092)
+  IMS_PER_BATCH: 1
+  BASE_LR: 0.00001
+  STEPS: (10000,)
   MAX_ITER: 368750
   WARMUP_FACTOR: 1.0
   WARMUP_ITERS: 10
@@ -43,5 +43,5 @@ TEST:
   EVAL_PERIOD: 5000
 DATALOADER:
   FILTER_EMPTY_ANNOTATIONS: True
-  NUM_WORKERS: 4
+  NUM_WORKERS: 2
 VERSION: 2
